tests/ui/traits/const-traits/const-impl-trait.stderr
error[E0277]: the trait bound `(): const PartialEq` is not satisfied
  --> $DIR/const-impl-trait.rs:34:17
   |
LL |     assert!(cmp(&()));
   |             --- ^^^
   |             |
   |             required by a bound introduced by this call
   |
note: trait `PartialEq` is implemented but not `const`
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
note: required by a bound in `cmp`
  --> $DIR/const-impl-trait.rs:11:23
   |
LL | const fn cmp(a: &impl [const] PartialEq) -> bool {
   |                       ^^^^^^^^^^^^^^^^^ required by this bound in `cmp`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
